# mini-chat-backend

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile.local  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  shell.nix
alembic/: env.py
alembic/versions/: 0a425e1877bc_update_message_foreign_key_in_.py  52b3cafcaa3a_create_tables.py  6739f543e630_update_timestamp_column.py  869ab05dbdd4_use_func_now_in_timestamp_column.py  a1e364a7c401_create_attachments_table.py
src/app/: main.py
src/app/api/: __init__.py  deps.py
src/app/api/v1/: __init__.py  attachment.py  attachments.py  auth.py  chat.py  chats.py  health.py  message.py  messages.py  user.py
src/app/core/: config.py  exceptions.py  logger.py  router.py
src/app/db/: configs.py  session.py
src/app/db/models/: __init__.py  attachment.py  chat.py  mappings.py  message.py  mixins.py  user.py
src/app/db/repositories/: __init__.py  attachment.py  base.py  chat.py  message.py  user.py
src/app/interfaces/db/: configs.py
src/app/interfaces/db/repositories/: __init__.py  attachment.py  base.py  chat.py  message.py  user.py
src/app/interfaces/utils/: uow.py
src/app/interfaces/utils/s3/: client.py
src/app/schemas/: __init__.py  attachment.py  base.py  chat.py  message.py  token.py  user.py
src/app/services/: __init__.py  attachment.py  base.py  chat.py  chat_discovery.py  edit_message.py  exceptions.py  message.py  user_auth.py  user_discovery.py  user_profile.py
src/app/utils/: exceptions.py  middleware.py  router.py  security.py  types.py  uow.py  websockets.py
src/app/utils/s3/: __init__.py  client.py
src/app/utils/security/: __init__.py  cookies.py  jwt.py  passwords.py
