[tool.poetry]
name = "mini-chat-backend"
version = "0.0.1"
description = ""
authors = ["Kiril Strezikozin <kirilstrezikozin@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.16.5"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
