[tool.poetry]
name = "minichat-backend"
version = "0.0.1"
description = ""
authors = ["Kiril Strezikozin <kirilstrezikozin@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.16.5"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
bcrypt = "^5.0.0"
python-jose = "^3.5.0"
websockets = "^15.0.1"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
boto3 = "^1.40.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
